@@ -1,3 +1,8 @@
+2009-10-27  Marcus Krause   <marcus#exp2009@t3sec.info>
+
+	* Bug #4927: UPDATE! show up only if last created password is not encrypted (thanks to Dimitri Koenig)
+
+
 2009-09-04  Marcus Krause   <marcus#exp2009@t3sec.info>
 
 	* Bug #4456: Allow overwriting translations via TS. (thanks to Jonas Duebi)
